# arbitrage_midware

./: README.md  arb_sandbox.ipynb  bookies_api.ipynb  main.py  mid_sandbox.ipynb  pyproject.toml  sandbox.ipynb
arbitrage_calc/data/: odds_data.json
middleware_app/src/: test_bets.py
middleware_app/src/utilities/: ABC_Bookmakers.py  Bet.py  SportsBetAU.py
